robballen75-Salesforce/4-7-15/src/objects/Enhancement_Request__c.object
<CustomObject>
    <description>This object is used to record requests for changes to Microsystems product(s), and the associated metadata (customer requesting, competitors, etc.)</description>
    <fields>
        <fullName>Business_Impacts_Calculation_displayed__c</fullName>
        <formula>CASE( (IF(( Eliminates_a_frequently_reported_issue__c = TRUE), 1, 0)+IF(( Enhances_supportability_of_product__c = TRUE), 1, 0) +IF(( Impacting_new_sales_competitive_feature__c = TRUE), 1, 0)+ IF(( Improves_development_architecture__c = TRUE), 1, 0)+ IF(( Renewal_referral_impact__c = TRUE), 1, 0)+ IF(( Simplifies_configuration_administration__c = TRUE), 1, 0)+ IF(( Simplifies_training_improves_UI__c = TRUE), 1, 0)+ IF(( Strategic_feature_high_value_to_MS__c = TRUE), 1, 0)+ IF(( We_think_it_is_really_important__c = TRUE), 1, 0) + IF(( Request_from_important_customer__c = TRUE), 1, 0)) , 0, 0, 1, 1, 2, 2, 3, 3, 4, 4, 5, 5,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is calculated based on the Business Impacts checked below.  A maximum of 5 counts toward this total.</inlineHelpText>
        <label>Business Impacts Calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <formula>Popularity_Calculation__c + Pervasiveness__c + Penalty__c + Process_Impact__c +  Business_Impacts_Calculation_displayed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Value = Popularity + Pervasiveness + Penalty + Process Impact + Business Impact</inlineHelpText>
        <label>Business Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Assigned_to_release__c</fullName>
        <description>The release an enhancement request has been assigned to for inclusion.</description>
        <label>Assigned to release</label>
        <picklist>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0 Update 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1 SR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0 Update 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ER_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enhancement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Competition__c</fullName>
        <label>Competition</label>
        <picklist>
            <controllingField>Product__c</controllingField>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealProof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocsCorp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esquire iCreate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esquire iScrub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HotDocs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HubbardOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Macpac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litera Change Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litera Metadact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne Metadata Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Softwise Innova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordAssist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word Document Inspector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshare Professional / Compare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshare Protect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patent Optimizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patent Wizard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PatentEase</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ER_Customer_Severity__c</fullName>
        <label>Customer Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1-Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ER_Development_Priority__c</fullName>
        <label>Development Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pattern Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Sensitive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ER_Feature_Area__c</fullName>
        <label>Feature Area</label>
        <picklist>
            <controllingField>Product__c</controllingField>
            <picklistValues>
                <fullName>Abbreviation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answer Files</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain Reaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross References</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3 Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3 Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration – Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialog Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXamine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXamine - DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXamine - Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXamine - Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXamine - Properties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXamine - Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXamine - Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedures</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ER_Fixed_In_Version__c</fullName>
        <label>Fixed In Version</label>
        <picklist>
            <controllingField>Product__c</controllingField>
            <picklistValues>
                <fullName>3BClean 2.9.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean 3.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean 3.0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean 3.1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean 3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean 4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean 4.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean 4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean 4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop 4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop 7.5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop 7.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop 7.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop 7.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop 7.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Server 4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author&apos;s Toolkit 7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author&apos;s Toolkit 7.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author&apos;s Toolkit 7.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Toolkit 7.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Toolkit 7.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Toolkit 7.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3 3.23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3 3.24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3 4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3 5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools 6.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools 6.1 SR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools 6.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools 6.2 Update 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ER_Number__c</fullName>
        <description>This is the numeric ID of the Enhancement Request.</description>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <label>ER #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ER_Resolution_Description__c</fullName>
        <description>A short description of the ER resolution.</description>
        <label>Resolution Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Indirectly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ER_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Consideration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ER_TFS_Number__c</fullName>
        <label>TFS Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_TF_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://tfsrvr03:8080/tfs/web/UI/Pages/Reports/CustomReport.aspx?wid=&quot; &amp;  ER_TFS_Number__c , ER_TFS_Number__c  )</formula>
        <label>TF Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effort_Estimate__c</fullName>
        <inlineHelpText>Effort Estimate:  How long do we think this will take to develop and test?
1:  Less than a day
2:  Less than a week
3:  Less than a month
4:  Less than 3 months
5:  More than 3 months</inlineHelpText>
        <label>Effort Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eliminates_a_frequently_reported_issue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>Eliminates a frequently reported issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhances_supportability_of_product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>Enhances supportability of product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impacting_a_Sale_Explanation__c</fullName>
        <inlineHelpText>Please provide details about why this is impacting the sale.</inlineHelpText>
        <label>Impacting a Sale Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impacting_a_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this enhancement is standing in the way of a sale</inlineHelpText>
        <label>Impacting a Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impacting_new_sales_competitive_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>Impacting new sales/competitive feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Improves_development_architecture__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>Improves development / architecture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MS_5_4_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the enhancement is to reintroduce functionality that was lost in an upgrade from 5.x to a newer version.</description>
        <label>5.4 Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Must_Do_ER__c</fullName>
        <label>Must Do ER</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checklist Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom XPath, Procedure or Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions Center Common Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Workflow</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Online Submission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PM_Backlog_Last_Updated_Reviewed__c</fullName>
        <description>Date the Enhancement Request was last viewed / updated by Product Management.</description>
        <inlineHelpText>Date the Enhancement Request was last viewed / updated by Product Management.</inlineHelpText>
        <label>PM Backlog Last Updated / Reviewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PM_Backlog_Notes__c</fullName>
        <description>Notes from Product Management regarding the status of this ER.</description>
        <inlineHelpText>Notes from Product Management regarding the status of this ER.</inlineHelpText>
        <label>PM Backlog Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Backlog_Status_Priority__c</fullName>
        <description>Ranked status / priority of backlogged items.</description>
        <inlineHelpText>0:  Dependent on 3rd Party.
1:  Very unlikely.
2:  In next generation product.
3:  Should be considered for next major release.
4:  Should be considered for next Minor release.
5:  We really need to do this soon.</inlineHelpText>
        <label>PM Backlog Status / Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Penalty__c</fullName>
        <inlineHelpText>Penalty:  How bad does this make Microsystems look?
1:  Missed competitive opportunity
2:  Annoying/frustrating to Admin
3:  Annoying/frustrating to end user
4:  Returns misleading results
5:  Corrupts data/content</inlineHelpText>
        <label>Penalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pervasiveness__c</fullName>
        <inlineHelpText>Pervasiveness:  How often will users actually encounter this?
1:  Rarely
2:  Monthly
3:  Weekly
4:  Daily
5:  Multiple times a day</inlineHelpText>
        <label>Pervasiveness</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Popularity_Calculation__c</fullName>
        <formula>CASE( Popularity_Cases__c + Popularity_Contracts__c + Popularity_Opportunities__c , 0, 0, 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Popularity Calculation:
1:  1 Customer
2:  2 Customers
3:  3 Customers
4:  4 Customers
5:  5+ Customers</inlineHelpText>
        <label>Popularity Calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Popularity_Cases__c</fullName>
        <inlineHelpText>Popularity:  How many Cases is this Enhancement associated with?</inlineHelpText>
        <label>Popularity:  Cases</label>
        <summaryForeignKey>Enhancement_Request_Case_Connector__c.Enhancement_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Popularity_Contracts__c</fullName>
        <inlineHelpText>Popularity:  How many Contracts is this enhancement associated with?</inlineHelpText>
        <label>Popularity:  Contracts</label>
        <summaryForeignKey>Enhancement_Request_Contract_Connector__c.Enhancement_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Popularity_Opportunities__c</fullName>
        <inlineHelpText>Popularity:  How many opportunities is this Enhancement associated with?</inlineHelpText>
        <label>Popularity:  Opportunities</label>
        <summaryForeignKey>Enhancement_Request_Connector__c.Enhancement_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Process_Impact__c</fullName>
        <inlineHelpText>Process Impact:  Is there a workaround and, if so, how painful is it?
1:  Admin front-end (configuration setting)
2:  End user easy workaround
3:  Admin difficult workaround
4:  End user difficult workaround
5:  No or very difficult workaround</inlineHelpText>
        <label>Process Impact</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>3BClean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Toolkit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3\LTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocID Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye/LexisDraft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye Defined Terms Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numbering Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patent Companion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF Compare Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ribbon Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOC Module</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <formula>IF( Effort_Estimate__c = 0, 0,  (Business_Value__c /  Effort_Estimate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ROI=Business Value / Effort Estimate</inlineHelpText>
        <label>ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_referral_impact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>Renewal/referral impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_from_important_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>Request from important customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Simplifies_configuration_administration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>Simplifies configuration/administration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Simplifies_training_improves_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>Simplifies training/improves UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_feature_high_value_to_MS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>Strategic feature (high value to MS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>We_think_it_is_really_important__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Impact:  What is the benefit of delivering this?  (1 point for each, maximum of 5 points)</inlineHelpText>
        <label>We think it is really important</label>
        <type>Checkbox</type>
    </fields>
    <label>Enhancement Request</label>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>View_All_Enhancement_Requests</fullName>
        <columns>ER_Number__c</columns>
        <columns>NAME</columns>
        <columns>ER_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Enhancement Requests</label>
    </listViews>
    <nameField>
        <label>ER Short Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhancement Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ERVerifyFixedInBuild</fullName>
        <active>true</active>
        <description>Verify that a value is selected for the Fixed In Build field if the resolution is &quot;fixed&quot;</description>
        <errorConditionFormula>AND ( 
ISPICKVAL( ER_Resolution__c  ,&quot;Fixed&quot;), 
TEXT(  ER_Fixed_In_Version__c  )=&quot;&quot; 
)</errorConditionFormula>
        <errorMessage>Please specify the Fixed In Version.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ERVerifyResolutionOnClose</fullName>
        <active>true</active>
        <description>Ensure that there is a resolution set if status is set to Closed</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(ER_Status__c ,&quot;Closed&quot;), 
TEXT( ER_Resolution__c )=&quot;&quot; 
)</errorConditionFormula>
        <errorDisplayField>ER_Resolution__c</errorDisplayField>
        <errorMessage>Please select the appropriate ER Resolution.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SetAssignedToRelease</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ISPICKVAL( ER_Status__c ,&quot;Assigned&quot;), 
TEXT( ER_Assigned_to_release__c )=&quot;&quot; 
)</errorConditionFormula>
        <errorDisplayField>ER_Assigned_to_release__c</errorDisplayField>
        <errorMessage>Please select the release to which the ER has been assigned.</errorMessage>
    </validationRules>
</CustomObject>